# diff-viewer

./: .buildconfig  meson.build  org.example.App.json  org.example.App.json~
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: main.vala  meson.build  window.ui  window.vala
